# SimulEDA-P1

./: CMakeLists.txt  TAB.c  TABB.c  TABB.h  TG.c  TG.h  TLSE.c  TLSE.h  main.c  main_TABB.c  teste_TABB.c
estrturas/headers/: TAB.h  TG.h
estrturas/src/: TAB.c  TABB.c  TG.c  TLSE.c
gabarito/headers/: q2.h  q3.h  q4.h  q5.h  q6.h  q7.h  q8.h  q9.h
gabarito/src/: q2.c  q3.c  q4.c  q5.c  q6.c  q7.c  q8.c  q9.c
